# push_swap

./: CMakeLists.txt  Makefile  author  bonus.c  change_a_stack.c  change_b_stack.c  change_both_stacks.c  change_stack_fun.c  change_stacks_no_output.c  checker  choose_op.c  commands_list_functions.c  copy_argv_to_stack.c  count_moves.c  create_lst_stack.c  create_stack.c  delete_stack.c  do_moves.c  error.c  find_min_max.c  general_sort.c  get_min_and_middle.c  help_for_parser.c  is_sort_checkers.c  kick_values.c  main.c  main_checker.c  main_pw.c  operators.c  parse_stack.c  print_stack.c  push_swap  push_swap.c  quick_sort.c  search_values.c  set_to_zero_stack.c  small_sort.c  sorting_check.c  test2.sh  three_or_five.c  (+3 more)
includes/: push_swap.h
includes/libft/: Makefile
includes/libft/headers/: ft_printf.h  get_next_line.h  libft.h
includes/libft/src/ft_printf/: flag.c  flag_manager_f.c  float_to_string.c  ft_printf.c  length.c  parse.c  precision.c  print_cs.c  print_di.c  print_f.c  print_flag.c  print_number.c  print_o.c  print_padding.c  print_ptr.c  print_u.c  print_x.c  round_ld.c  width.c
includes/libft/src/ft_printf/char/: print_cs.c  print_ptr.c
includes/libft/src/ft_printf/numbers/: float_to_string.c  print_di.c  print_f.c  print_number.c  print_o.c  print_u.c  print_x.c
includes/libft/src/ft_printf/tools/: flag.c  flag_manager_f.c  length.c  precision.c  print_flag.c  print_padding.c  round_ld.c  width.c
includes/libft/src/get_next_line/: get_next_line.c
includes/libft/src/libft/: ft_abs.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_chr_and_fill.c  ft_clear_mass.c  ft_del_matrix.c  ft_digstr_cpy.c  ft_fact.c  ft_hex_len.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_len_base.c  ft_longlong_len.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_pow.c  ft_print_u_hex.c  ft_ptr_len_base.c  ft_put_longlong_base.c  ft_put_u_longlong_base.c  ft_putchar.c  (+46 more)
