cmake_minimum_required(VERSION 3.15)
project(push_swap C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(includes/libft/headers)

add_executable(push_swap
    includes/libft/headers/ft_printf.h
    includes/libft/headers/get_next_line.h
    includes/libft/headers/libft.h
    includes/libft/src/ft_printf/char/print_cs.c
    includes/libft/src/ft_printf/char/print_ptr.c
    includes/libft/src/ft_printf/numbers/float_to_string.c
    includes/libft/src/ft_printf/numbers/print_di.c
    includes/libft/src/ft_printf/numbers/print_f.c
    includes/libft/src/ft_printf/numbers/print_number.c
    includes/libft/src/ft_printf/numbers/print_o.c
    includes/libft/src/ft_printf/numbers/print_u.c
    includes/libft/src/ft_printf/numbers/print_x.c
    includes/libft/src/ft_printf/tools/flag.c
    includes/libft/src/ft_printf/tools/flag_manager_f.c
    includes/libft/src/ft_printf/tools/length.c
    includes/libft/src/ft_printf/tools/precision.c
    includes/libft/src/ft_printf/tools/print_flag.c
    includes/libft/src/ft_printf/tools/print_padding.c
    includes/libft/src/ft_printf/tools/round_ld.c
    includes/libft/src/ft_printf/tools/width.c
    includes/libft/src/ft_printf/ft_printf.c
    includes/libft/src/ft_printf/parse.c
    includes/libft/src/get_next_line/get_next_line.c
    includes/libft/src/libft/ft_abs.c
    includes/libft/src/libft/ft_atoi.c
    includes/libft/src/libft/ft_atoi_base.c
    includes/libft/src/libft/ft_bzero.c
    includes/libft/src/libft/ft_clear_mass.c
    includes/libft/src/libft/ft_fact.c
    includes/libft/src/libft/ft_hex_len.c
    includes/libft/src/libft/ft_isalnum.c
    includes/libft/src/libft/ft_isalpha.c
    includes/libft/src/libft/ft_isascii.c
    includes/libft/src/libft/ft_isdigit.c
    includes/libft/src/libft/ft_isprint.c
    includes/libft/src/libft/ft_isspace.c
    includes/libft/src/libft/ft_itoa.c
    includes/libft/src/libft/ft_len_base.c
    includes/libft/src/libft/ft_longlong_len.c
    includes/libft/src/libft/ft_lstadd.c
    includes/libft/src/libft/ft_lstdel.c
    includes/libft/src/libft/ft_lstdelone.c
    includes/libft/src/libft/ft_lstiter.c
    includes/libft/src/libft/ft_lstmap.c
    includes/libft/src/libft/ft_lstnew.c
    includes/libft/src/libft/ft_memalloc.c
    includes/libft/src/libft/ft_memccpy.c
    includes/libft/src/libft/ft_memchr.c
    includes/libft/src/libft/ft_memcmp.c
    includes/libft/src/libft/ft_memcpy.c
    includes/libft/src/libft/ft_memdel.c
    includes/libft/src/libft/ft_memmove.c
    includes/libft/src/libft/ft_memset.c
    includes/libft/src/libft/ft_min.c
    includes/libft/src/libft/ft_pow.c
    includes/libft/src/libft/ft_print_u_hex.c
    includes/libft/src/libft/ft_ptr_len_base.c
    includes/libft/src/libft/ft_put_longlong_base.c
    includes/libft/src/libft/ft_put_u_longlong_base.c
    includes/libft/src/libft/ft_putchar.c
    includes/libft/src/libft/ft_putchar_fd.c
    includes/libft/src/libft/ft_putendl.c
    includes/libft/src/libft/ft_putendl_fd.c
    includes/libft/src/libft/ft_putnbr.c
    includes/libft/src/libft/ft_putnbr_fd.c
    includes/libft/src/libft/ft_putnchar.c
    includes/libft/src/libft/ft_putnstr.c
    includes/libft/src/libft/ft_putstr.c
    includes/libft/src/libft/ft_putstr_fd.c
    includes/libft/src/libft/ft_realloc.c
    includes/libft/src/libft/ft_sqrt.c
    includes/libft/src/libft/ft_str_multi_chr.c
    includes/libft/src/libft/ft_strcat.c
    includes/libft/src/libft/ft_strchr.c
    includes/libft/src/libft/ft_strclr.c
    includes/libft/src/libft/ft_strcmp.c
    includes/libft/src/libft/ft_strcpy.c
    includes/libft/src/libft/ft_strdel.c
    includes/libft/src/libft/ft_strdup.c
    includes/libft/src/libft/ft_strequ.c
    includes/libft/src/libft/ft_striter.c
    includes/libft/src/libft/ft_striteri.c
    includes/libft/src/libft/ft_strjoin.c
    includes/libft/src/libft/ft_strlcat.c
    includes/libft/src/libft/ft_strlen.c
    includes/libft/src/libft/ft_strmap.c
    includes/libft/src/libft/ft_strmapi.c
    includes/libft/src/libft/ft_strncat.c
    includes/libft/src/libft/ft_strncmp.c
    includes/libft/src/libft/ft_strncpy.c
    includes/libft/src/libft/ft_strndup.c
    includes/libft/src/libft/ft_strnequ.c
    includes/libft/src/libft/ft_strnew.c
    includes/libft/src/libft/ft_strnstr.c
    includes/libft/src/libft/ft_strrchr.c
    includes/libft/src/libft/ft_strsplit.c
    includes/libft/src/libft/ft_strstr.c
    includes/libft/src/libft/ft_strsub.c
    includes/libft/src/libft/ft_strtrim.c
    includes/libft/src/libft/ft_tolower.c
    includes/libft/src/libft/ft_toupper.c
    includes/libft/src/libft/ft_u_len_base.c
    includes/libft/src/libft/ft_u_longlong_len.c
    includes/libft/src/libft/ft_wordcount.c
	includes/libft/src/libft/ft_chr_and_fill.c
	includes/libft/src/libft/ft_digstr_cpy.c
	includes/libft/src/libft/ft_swap.c
    includes/push_swap.h
		change_a_stack.c
		change_b_stack.c
		change_both_stacks.c
		change_stack_fun.c
		copy_argv_to_stack.c
		count_moves.c
		create_stack.c
		delete_stack.c
		do_moves.c
		error.c
		find_min_max.c
		is_sort_checkers.c
		main_pw.c
		push_swap.c
		quick_sort.c
		set_to_zero_stack.c
		small_sort.c
		validation.c)
